// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feat.api.googleDrive GoogleDriveClient Retrieves a saved entity Creates with one client, retrieves with another 1`] = `
Object {
  "description": "a",
  "name": "a",
  "portfolio": false,
  "uuid": "folder-1",
}
`;

exports[`feat.api.googleDrive GoogleDriveClient Sustains two concurrent GoogleDriveClients Create doesn't overwrite 1`] = `
Object {
  "folders": Object {},
  "media": Object {},
  "projects": Object {
    "folder-1": Object {
      "description": "a",
      "name": "a",
      "portfolio": false,
      "uuid": "folder-1",
    },
    "folder-2": Object {
      "description": "b",
      "name": "b",
      "portfolio": false,
      "uuid": "folder-2",
    },
  },
}
`;
